# ai-laws-of-simplicity

./: .gitignore  Dockerfile  EXPERIMENT_STATUS.md  INSTALL.md  PILOT_RESULTS.md  README.md  pyproject.toml
article/: 2026-03-17-the-best-ai-agents-will-be-the-simplest-ones.md
docs/superpowers/plans/: 2026-03-15-mini-swe-agent-integration.md
docs/superpowers/specs/: 2026-03-15-swe-agent-integration-design.md
experiment/: TOKEN_EXTRACTION.md  __main__.py  config.py  runner.py
experiment/harness/: base.py  swe_bench.py
experiment/metrics/: analyzer.py  collector.py
experiment/mini_agent/: __init__.py  config_builder.py  runner.py  trajectory_parser.py
scripts/: analyze_results.py  run_experiment.sh
skills/laws-of-simplicity/: SKILL.md
tests/: test_analyzer.py  test_mini_agent_config.py  test_mini_agent_runner.py  test_runner.py  test_trajectory_parser.py
